test/programs/good/check-terms-precedence/quantum_controlled_gate_with_terms_followed_by_let_sugar_multiple.lq
fun :: Qbit
fun = with [ t1 t2, t3 ] ctrl [ @1, @1 ] gate H (|var1, var2| <- term1 ; term2)
