test/programs/bad/example-ClassicCtrlGates__ControlQbitsNotDistinct.lq

fun :: !(Qbit * Qbit * Qbit ->  Qbit * Qbit)
fun qubits = 
       |q1, q2, q3| <- qubits;
       q1 <- with [ q1, q1 ] ctrl [ 0b1, 0b1 ] gate X q3;
       |q1, q2| <- with [ q1 ] ctrl [ @1 ] gate X q2;
       q2 <- with [ q2, q1, q2 ] ctrl [ 0b0, 0b0, 0b0 ] gate X q3;
       (q1, q2)

main :: Bit
main = 1
